[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Scripts/StartMenuLogic.gd" type="Script" id=1]



[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Resources/Fonts/PequenaNeo-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 30
outline_color = Color( 0.90625, 0.859936, 0.817749, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="StartMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = -142.0
margin_right = 143.5
margin_bottom = 142.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_top = 9.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "Выбери сложность"
align = 1

[node name="ExitButton" type="Button" parent="Panel"]
margin_left = 61.9685
margin_top = 232.381
margin_right = 215.969
margin_bottom = 269.381
custom_fonts/font = SubResource( 3 )
text = "Выход"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 61.0
margin_top = 66.0
margin_right = 215.0
margin_bottom = 212.0
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyDifficultButton" type="Button" parent="Panel/VBoxContainer"]
margin_right = 154.0
margin_bottom = 45.0
size_flags_vertical = 3
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Легко"

[node name="MediunDifficultButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 50.0
margin_right = 154.0
margin_bottom = 95.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Средне"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardDifficultButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 100.0
margin_right = 154.0
margin_bottom = 146.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Сложно"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/EasyDifficultButton" to="." method="_on_EasyDifficultButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MediunDifficultButton" to="." method="_on_MediunDifficultButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HardDifficultButton" to="." method="_on_HardDifficultButton_pressed"]
